# line-official-account-architect

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.json  .pnp.cjs  .pnp.loader.mjs  .prettierignore  .prettierrc  App.tsx  Cargo.toml  README.md  eslint.config.js  index.css  index.html  metadata.json  opencode.json  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
.agents/skills/gh-pr-review-thread-workflow/: SKILL.md
.agents/skills/gh-pr-review-thread-workflow/agents/: openai.yaml
.agents/skills/sott0n-tt-agent-skills-using-github/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
components/: ErrorBoundary.tsx  McpServerConfigPanel.tsx  MessageSendTestUI.tsx  MobilePreview.tsx  RichMenuControlPanel.tsx
coverage/: coverage-final.json  index.html
coverage/components/: ErrorBoundary.tsx.html  index.html
coverage/services/: geminiService.ts.html  index.html
docs/: leptos-migration-plan.md  requirements.md
memory/: skills.md
scripts/: deploy.sh
services/: geminiService.test.ts  geminiService.ts  mcpService.ts
src/: lib.rs  types.rs
src/__tests__/components/: ErrorBoundary.test.tsx
src/__tests__/services/: geminiService.test.ts  mcpService.test.ts
